@@ -1,166 +1,90 @@
-/*
- * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
- * Click nbfs://nbhost/SystemFileSystem/Templates/JSP_Servlet/Servlet.java to edit this template
- */
 package com.fivepigs.app.web.payment;
 
 import com.fivepigs.app.config.VNPayConfig;
 import com.fivepigs.app.util.VNPayUtil;
-import java.io.IOException;
-import java.io.PrintWriter;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.annotation.WebServlet;
 import jakarta.servlet.http.HttpServlet;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import jakarta.servlet.http.HttpSession;
+
+import java.io.IOException;
+import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
+import java.text.SimpleDateFormat;
 import java.util.ArrayList;
+import java.util.Calendar;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.text.SimpleDateFormat;
-import java.util.Calendar;
-import java.net.URLEncoder;
 
-/**
- *
- * @author thanh
- */
 @WebServlet(name = "VNPayPaymentServlet", urlPatterns = {"/create-payment"})
 public class VNPayPaymentServlet extends HttpServlet {
 
-    /**
-     * Processes requests for both HTTP <code>GET</code> and <code>POST</code>
-     * methods.
-     *
-     * @param request servlet request
-     * @param response servlet response
-     * @throws ServletException if a servlet-specific error occurs
-     * @throws IOException if an I/O error occurs
-     */
-    protected void processRequest(HttpServletRequest request, HttpServletResponse response)
-            throws ServletException, IOException {
-        response.setContentType("text/html;charset=UTF-8");
-        try (PrintWriter out = response.getWriter()) {
-            /* TODO output your page here. You may use following sample code. */
-            out.println("<!DOCTYPE html>");
-            out.println("<html>");
-            out.println("<head>");
-            out.println("<title>Servlet VNPayPaymentServlet</title>");
-            out.println("</head>");
-            out.println("<body>");
-            out.println("<h1>Servlet VNPayPaymentServlet at " + request.getContextPath() + "</h1>");
-            out.println("</body>");
-            out.println("</html>");
-        }
-    }
-
-    // <editor-fold defaultstate="collapsed" desc="HttpServlet methods. Click on the + sign on the left to edit the code.">
-    /**
-     * Handles the HTTP <code>GET</code> method.
-     *
-     * @param request servlet request
-     * @param response servlet response
-     * @throws ServletException if a servlet-specific error occurs
-     * @throws IOException if an I/O error occurs
-     */
     @Override
     protected void doGet(HttpServletRequest request, HttpServletResponse response)
             throws ServletException, IOException {
-        HttpSession session = request.getSession();
-
-        Double total = (Double) session.getAttribute("checkout_total");
-
-        if (total == null) {
-            response.sendRedirect(request.getContextPath() + "/cart");
+        HttpSession session = request.getSession(false);
+        Object pendingUser = session == null ? null : session.getAttribute("checkout_pending_user_id");
+        if (session == null || pendingUser == null) {
+            response.sendRedirect(request.getContextPath() + "/cart?msg=empty");
             return;
         }
 
-        long amount = (long) (total * 24000 * 100);
+        Object totalAttr = session.getAttribute("checkout_total");
+        Double total = totalAttr instanceof Double ? (Double) totalAttr : null;
+        if (total == null || total <= 0) {
+            response.sendRedirect(request.getContextPath() + "/cart?msg=empty");
+            return;
+        }
 
-        String vnp_TxnRef = String.valueOf(System.currentTimeMillis());
+        long amount = Math.round(total * 24000 * 100);
+        String txnRef = String.valueOf(System.currentTimeMillis());  //dung thoi gian hien tai lam ma giao dich
+        session.setAttribute("vnp_txn_ref", txnRef);
 
-        Map<String, String> vnp_Params = new HashMap<>();
-
-        vnp_Params.put("vnp_Version", "2.1.0");
-        vnp_Params.put("vnp_Command", "pay");
-        vnp_Params.put("vnp_TmnCode", VNPayConfig.vnp_TmnCode);
-        vnp_Params.put("vnp_Amount", String.valueOf(amount));
-        vnp_Params.put("vnp_CurrCode", "VND");
-
-        vnp_Params.put("vnp_TxnRef", vnp_TxnRef);
-        vnp_Params.put("vnp_OrderInfo", "Payment for order " + vnp_TxnRef);
-        vnp_Params.put("vnp_OrderType", "other");
-
-        vnp_Params.put("vnp_Locale", "vn");
-        vnp_Params.put("vnp_ReturnUrl", VNPayConfig.vnp_ReturnUrl);
-        vnp_Params.put("vnp_IpAddr", request.getRemoteAddr());
+        Map<String, String> params = new HashMap<>();
+        params.put("vnp_Version", "2.1.0");
+        params.put("vnp_Command", "pay");
+        params.put("vnp_TmnCode", VNPayConfig.vnp_TmnCode);
+        params.put("vnp_Amount", String.valueOf(amount));
+        params.put("vnp_CurrCode", "VND");
+        params.put("vnp_TxnRef", txnRef);
+        params.put("vnp_OrderInfo", "FIVEPIGS checkout " + txnRef);
+        params.put("vnp_OrderType", "other");
+        params.put("vnp_Locale", "vn");
+        params.put("vnp_ReturnUrl", buildReturnUrl(request));
+        params.put("vnp_IpAddr", request.getRemoteAddr());
 
         Calendar cld = Calendar.getInstance();
         SimpleDateFormat formatter = new SimpleDateFormat("yyyyMMddHHmmss");
-        String createDate = formatter.format(cld.getTime());
+        params.put("vnp_CreateDate", formatter.format(cld.getTime()));
 
-        vnp_Params.put("vnp_CreateDate", createDate);
-
-        List<String> fieldNames = new ArrayList<>(vnp_Params.keySet());
+        List<String> fieldNames = new ArrayList<>(params.keySet());
         Collections.sort(fieldNames);
 
         StringBuilder hashData = new StringBuilder();
         StringBuilder query = new StringBuilder();
-
         for (String fieldName : fieldNames) {
-
-            String fieldValue = vnp_Params.get(fieldName);
-
+            String fieldValue = params.get(fieldName);
             if (hashData.length() > 0) {
                 hashData.append('&');
                 query.append('&');
             }
-
-            hashData.append(fieldName)
-                    .append('=')
-                    .append(URLEncoder.encode(fieldValue, "UTF-8"));
-
-            query.append(fieldName)
-                    .append('=')
-                    .append(URLEncoder.encode(fieldValue, "UTF-8"));
+            String encoded = URLEncoder.encode(fieldValue, StandardCharsets.UTF_8);
+            hashData.append(fieldName).append('=').append(encoded);
+            query.append(fieldName).append('=').append(encoded);
         }
 
-        String secureHash = VNPayUtil.hmacSHA512(
-                VNPayConfig.vnp_HashSecret,
-                hashData.toString()
-        );
-
+        String secureHash = VNPayUtil.hmacSHA512(VNPayConfig.vnp_HashSecret, hashData.toString());
         query.append("&vnp_SecureHash=").append(secureHash);
 
-        String paymentUrl = VNPayConfig.vnp_Url + "?" + query.toString();
-
-        response.sendRedirect(paymentUrl);
+        response.sendRedirect(VNPayConfig.vnp_Url + "?" + query);
     }
 
-    /**
-     * Handles the HTTP <code>POST</code> method.
-     *
-     * @param request servlet request
-     * @param response servlet response
-     * @throws ServletException if a servlet-specific error occurs
-     * @throws IOException if an I/O error occurs
-     */
-    @Override
-    protected void doPost(HttpServletRequest request, HttpServletResponse response)
-            throws ServletException, IOException {
-        processRequest(request, response);
+    private String buildReturnUrl(HttpServletRequest request) {
+        return request.getScheme() + "://" + request.getServerName() + ":" + request.getServerPort()
+                + request.getContextPath() + "/vnpay-return";
     }
-
-    /**
-     * Returns a short description of the servlet.
-     *
-     * @return a String containing servlet description
-     */
-    @Override
-    public String getServletInfo() {
-        return "Short description";
-    }// </editor-fold>
-
 }
